service CheckoutService {
    rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse) {}
}

message PlaceOrderRequest {
    string user_id = 1;
    Address address = 2;
    string email = 3;
    CreditCardInfo credit_card = 4;
    repeated OrderItem items = 5;
}

service PaymentService {
    rpc Charge(ChargeRequest) returns (ChargeResponse) {}
}

message ChargeRequest {
    Money amount = 1;
    CreditCardInfo credit_card = 2;
}

service ShippingService {
    rpc ShipOrder(ShipOrderRequest) returns (ShipOrderResponse) {}
}

message ShipOrderRequest {
    Address address = 1;
    repeated CartItem items = 2;
}
